--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </button>
 
             <div class="header__button--dropped-down-menu is-open" id="header__button--dropped-down-menu" data-menu>          
-випадаюче вікно
+вип вікно
 
    
 
