--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,15 @@
 <li class="overlay-section__project" >
 <a class="overlay-section__shadow"  href=""> 
  <div class="overlay-section__project--depicted">
-<img   src="./images/img(4).jpg" alt="посилання на вебсайт" width="370">       
+<img 
+srcset="./images/tehnokryak/texnokryak-354.jpg 1x,
+./images/tehnokryak/texnokryak-354@2x.jpg 2x,
+./images/tehnokryak/tehnokryak-370.jpg 1x,
+./images/tehnokryak/texnokryak-740@2x.jpg 2x,
+./images/tehnokryak/tehnokryak-450.jpg 1x,
+./images/tehnokryak/texnokryak-900@2x.jpg 2x
+"
+src="./images/tehnokryak/texnokryak-354.jpg" alt="посилання на вебсайт" width="370">       
 <div class="overlay-section__project--informed">
 <p class="overlay-section__project--announced">
 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпну інформацію про компанію чи фізособу.
@@ -112,7 +120,15 @@
 <li class="overlay-section__project">
 <a  class="overlay-section__shadow" href="">
 <div class="overlay-section__project--depicted">
-<img src="./images/img(5).jpg" alt="постер з футболістами" width="370">
+<img
+srcset="./images/new-orlean/new-orlean-354.jpg 1x,
+./images/new-orlean/new-orlean-708@2x.jpg 2x,
+./images/new-orlean/new-orlean-370.jpg 1x,
+./images/new-orlean/new-orlean-740@2x.jpg 2x,
+./images/new-orlean/new-orlean-450.jpg 1x,
+./images/new-orlean/new-orlean-900@2x.jpg 2x
+"
+src="./images/new-orlean/new-orlean-354.jpg" alt="постер з футболістами" width="370">
     <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -131,7 +147,15 @@
 <li class="overlay-section__project">
     <a class="overlay-section__shadow"  href="">
      <div class="overlay-section__project--depicted">
-     <img src="./images/Seafod.jpg" alt="Seafod" width="370">
+     <img
+     srcset="./images/seafood/seafood-354.jpg 1x,
+./images/seafood/seafood-708@2x.jpg 2x,
+./images/seafood/seafood-370.jpg 1x,
+./images/seafood/seafood-740@2x.jpg 2x,
+./images/seafood/seafood-450.jpg 1x,
+./images/new-orlean/new-orlean-900@2x.jpg 2x
+"
+     src="./images/seafood/seafood-354.jpg" alt="Seafod" width="370">
      <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -150,7 +174,15 @@
 <li class="overlay-section__project">
        <a class="overlay-section__shadow" href="">
         <div class="overlay-section__project--depicted">
-        <img src="./images/headphones.jpg" alt="headphones" width="370">
+        <img
+         srcset="./images/prime/prime-354.jpg 1x,
+./images/prime/prime-708@2x.jpg 2x,
+./images/prime/prime-370.jpg 1x,
+./images/prime/prime-740@2x.jpg 2x,
+./images/prime/prime-450.jpg 1x,
+./images/prime/prime-900@2x.jpg 2x
+"
+        src="./images/prime/prime-354.jpg" alt="headphones" width="370">
         <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -169,7 +201,15 @@
 <li class="overlay-section__project">
    <a class="overlay-section__shadow" href=""> 
         <div class="overlay-section__project--depicted">
-        <img src="./images/Boxes.jpg" alt="boxes" width="370">
+        <img
+         srcset="./images/boxes/boxes-354.jpg 1x,
+./images/boxes/boxes-708@2x.jpg 2x,
+./images/boxes/boxes-370.jpg 1x,
+./images/boxes/boxes-740@2x.jpg 2x,
+./images/boxes/boxes-450.jpg1x,
+./images/boxes/boxes-900@2x.jpg 2x
+"
+        src="./images/boxes/boxes-354.jpg" alt="boxes" width="370">
        <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -188,7 +228,15 @@
 <li class="overlay-section__project">
     <a class="overlay-section__shadow" href="">
         <div class="overlay-section__project--depicted">
-        <img src="./images/web-page.jpg" alt="web-page" width="370">
+        <img
+        srcset="./images/inspiration/inspiration-354.jpg 1x,
+./images/inspiration/inspiration-708@2x.jpg 2x,
+./images/inspiration/inspiration-370.jpg 1x,
+./images/inspiration/inspiration-740@2x.jpg 2x,
+./images/inspiration/inspiration-450.jpg 1x,
+./images/inspiration/inspiration-900@2x.jpg 2x
+"
+        src="./images/inspiration/inspiration-354.jpg" alt="web-page" width="370">
         <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -207,7 +255,15 @@
 <li class="overlay-section__project">
     <a class="overlay-section__shadow" href="">
         <div class="overlay-section__project--depicted">
-        <img src="./images/limited-edition.jpg" alt="limited-edition" width="370">
+        <img
+        srcset="./images/limited-edition/limited-edition-354.jpg 1x,
+./images/limited-edition/limited-edition-708@2x.jpg 2x,
+./images/limited-edition/limited-edition-370.jpg 1x,
+./images/limited-edition/limited-edition-740@2x.jpg 2x,
+./images/limited-edition/limited-edition-450.jpg 1x,
+./images/limited-edition/limited-edition-900@2x.jpg 2x
+"
+        src="./images/limited-edition/limited-edition-354.jpg" alt="limited-edition" width="370">
     <div  class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -226,7 +282,15 @@
 <li class="overlay-section__project">
 <a class="overlay-section__shadow" href="">
     <div class="overlay-section__project--depicted">
-        <img src="./images/Lab.jpg" alt="lab" width="370">
+        <img
+        srcset="./images/lab/lab-354.jpg 1x,
+./images/lab/lab-708@2x.jpg 2x,
+./images/lab/lab-370.jpg 1x,
+./images/lab/lab-740@2x.jpg 2x,
+./images/lab/lab-450.jpg 1x,
+./images/lab/lab-900@2x.jpg 2x
+"
+        src="./images/lab/lab-354.jpg" alt="lab" width="370">
         <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -245,7 +309,15 @@
 <li class="overlay-section__project">
          <a class="overlay-section__shadow"  href="">
         <div class="overlay-section__project--depicted">
-        <img src="./images/growing-business.jpg" alt="growing-business" width="370">
+        <img
+         srcset="./images/business/business-354.jpg 1x,
+./images/business/business-708@2x.jpg 2x,
+./images/business/business-370.jpg 1x,
+./images/business/business-740@2x.jpg 2x,
+./images/business/business-450.jpg 1x,
+./images/business/business-900@2x.jpg 2x
+"
+        src="./images/business/business-354.jpg" alt="growing-business" width="370">
        <div class="overlay-section__project--informed">
         <p class="overlay-section__project--announced">
             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
