--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         Наша команда
     </h2>
     <ul class="team-section__menu">
-                    <li class="team-section__member">
+                    <li class="team-section__member ">
                 <img
 srcset="./images/Ihor/Ihor-270.jpg 1x,
 ./images/Ihor/Ihor-540@2x.jpg 2x,
@@ -243,7 +243,7 @@ srcset="./images/Ihor/Ihor-270.jpg 1x,
 ./images/Ihor/Ihor-450.jpg 1x,
 ./images/Ihor/Ihor-900@2x.jpg 2x
 "
-class="team-section__member--visualized" src="./images/Ihor/Ihor-270.jpg" alt="член команди 1" width="260">
+class="team-section__member--visualized " src="./images/Ihor/Ihor-270.jpg" alt="член команди 1" width="260">
                 <h3 class="team-section__member--named">Ігор Дем'яненко</h3>
                 <p class="team-section__member--busy">
                     Product Designer
@@ -580,16 +580,16 @@ srcset="./images/Myh/Myh-270.jpg 1x,
             <div class="footer__network footer__network-mobile ">
                 <div class="footer__network--conected footer__network--signed">
                     <label for="email">
-                        <input class="footer__network--emailed footer__network--emailed-mobile" type="email" name="email" id="email"
-                            placeholder="E-mail.com">
+                        <input class="footer__network--emailed footer__network--emailed-mobile" type="email"
+                            name="email" id="email" placeholder="E-mail.com">
 
                     </label>
 
                 </div>
 
                 <div class="footer__button--signed footer__button--signed-mobile">
-                    <button class="footer__button--submited" type="submit">Підписатися <svg class=" footer__button--aproved"
-                            width="18" height="18">
+                    <button class="footer__button--submited" type="submit">Підписатися <svg
+                            class=" footer__button--aproved" width="18" height="18">
                             <use href="./images/icons/symbol-defs-sign.svg#icon-icon-send">
                             </use>
                         </svg>
@@ -608,6 +608,7 @@ srcset="./images/Myh/Myh-270.jpg 1x,
 
     </div>
 </footer>
+
 
 <div class="backdrop is-hidden" data-modal>
     <div class="backdrop__modal">
@@ -691,6 +692,9 @@ srcset="./images/Myh/Myh-270.jpg 1x,
 </div>
      
 <script src="./js/drop-menu.js"></script>
+
+<script src="./js/mobile-menu.js"></script>
+
 
 
     <script src="./js/modal.js"></script>
