--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ srcset="./images/Myh/Myh-270.jpg 1x,
     <div class="footer__container  footer__container-tablet footer__container-mobile">
 
         <div class="footer__container--left footer__container--left-tablet footer__container--left-mobile ">
-            <a class="footer__logo footer__logo-mobile" href=""> <span class="footer__logo--blue">Web</span><span
+            <a class="footer__logo footer__logo-mobile footer__logo-tablet " href=""> <span class="footer__logo--blue">Web</span><span
                     class="footer__logo--white">Studio</span> </a>
 
             <address class="footer__address">
